Closed Bug 944892 Opened 11 years ago Closed 10 years ago

Debug build fails to build with -Werror=int-to-pointer-cast

Categories

(Firefox Build System :: General, defect)

x86_64
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla29

People

(Reporter: sylvestre, Assigned: u493164)

References

Details

(Whiteboard: [qa-])

Attachments

(1 file, 1 obsolete file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:23.0) Gecko/20100101 Firefox/23.0 Iceweasel/23.0.1 (Beta/Release)
Build ID: 20130821135347

Steps to reproduce:

When forcing -Werror=int-to-pointer-cast globally (see bug 781552), the debug build fails with:

../../../tools/trace-malloc/tmreader.c: In function 'tmreader_eventloop':
../../../tools/trace-malloc/tmreader.c:527:19: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
../../../tools/trace-malloc/tmreader.c:548:19: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]


See: 
https://tbpl.mozilla.org/php/getParsedLog.php?id=31262559&tree=Try&full=1
Component: Untriaged → Build Config
Product: Firefox → Core
Blocks: 781552
Hi,

I'd like to fix this bug.
Assignee: nobody → calixte.denizet
Attached patch bug944892.diff (obsolete) — Splinter Review
Attachment #8350182 - Flags: review+
Attachment #8350182 - Flags: review+ → review?(mh+mozilla)
Attachment #8350182 - Flags: review?(mh+mozilla) → review?(dbaron)
Comment on attachment 8350182 [details] [diff] [review]
bug944892.diff

Seems better to add the necessary casts than to suppress the warning.
Attachment #8350182 - Flags: review?(dbaron) → review-
ok David, I'll do that.
Attachment #8362994 - Flags: review?(sylvestre)
Attachment #8362994 - Flags: review?(dbaron)
Attachment #8362994 - Flags: review?(sylvestre) → review+
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #8362994 - Flags: checkin?(dbaron)
Attachment #8350182 - Attachment is obsolete: true
Comment on attachment 8362994 [details] [diff] [review]
bug944892_v2.diff

https://hg.mozilla.org/integration/mozilla-inbound/rev/a8d637b029a7

In the future, you can just use the checkin-needed bug keyword instead of requesting checkin from a specific person. Also, please make sure that future patches have the needed commit information included in them. Makes life much easier for those landing on your behalf :)
https://developer.mozilla.org/en-US/docs/Mercurial_FAQ#How_can_I_generate_a_patch_for_somebody_else_to_check-in_for_me.3F
Attachment #8362994 - Flags: checkin?(dbaron) → checkin+
https://hg.mozilla.org/mozilla-central/rev/a8d637b029a7
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Whiteboard: [qa-]
Product: Core → Firefox Build System
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: