Bug 944892 - Add uintptr_t casts to fix bustage with -Werror=int-to-pointer-cast set. r=dbaron